# OOP

./: CMakeLists.txt  main.cpp
 IndustrialProgramming/workbook_1/: Node.cpp  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
Algoritm/workbook_1/: task_4.cpp  task_5.cpp
Algoritm/workbook_2/: task_1_2.cpp  task_2_2.cpp  task_3_2.cpp
Algoritm/workbook_3/: task_1_3.cpp  task_2_3.cpp  task_3_3.cpp  task_4_3.cpp  task_5_3.cpp
Algoritm/workbook_4/: task_1_4.cpp  task_2_4.cpp  task_3_4.cpp  task_4_4.cpp
Algoritm/workbook_5/: task_1_5.cpp  task_2_5.cpp  task_3_5.cpp  task_4_5.cpp
some_class/: 27.cpp  28.cpp  29.cpp  30.cpp  Figure.cpp  complex.cpp  mystack_oop.cpp  telegraf.cpp  triangle_circle.cpp
