cmake_minimum_required(VERSION 3.29)
project(untitled3)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled3 some_class/mystack_oop.cpp
        some_class/complex.cpp
        some_class/triangle_circle.cpp
        " IndustrialProgramming/workbook_1/Node.cpp"
        " IndustrialProgramming/workbook_1/task_1.cpp"
        " IndustrialProgramming/workbook_1/task_1.cpp"
        " IndustrialProgramming/workbook_1/task_2.cpp"
        " IndustrialProgramming/workbook_1/task_3.cpp"
        " IndustrialProgramming/workbook_1/task_4.cpp"
)
