cmake_minimum_required(VERSION 3.29)
project(untitled3)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled3 some_class/mystack_oop.cpp
        some_class/complex.cpp
        some_class/triangle_circle.cpp
        Algoritm/workbook_1/Node.cpp
        Algoritm/workbook_1/task_1.cpp
        Algoritm/workbook_1/task_2.cpp
        Algoritm/workbook_1/task_3.cpp
        Algoritm/workbook_1/task_4.cpp
        Algoritm/workbook_1/task_5.cpp
        Algoritm/workbook_2/task_1_2.cpp
        Algoritm/workbook_2/task_2_2.cpp
        Algoritm/workbook_2/task_3_2.cpp
        some_class/Figure.cpp
        some_class/telegraf.cpp
        some_class/27.cpp
        some_class/28.cpp
        some_class/29.cpp
        some_class/30.cpp
        Algoritm/workbook_3/task_1_3.cpp
        Algoritm/workbook_3/task_2_3.cpp
        Algoritm/workbook_3/task_3_3.cpp
        Algoritm/workbook_3/task_4_3.cpp
        Algoritm/workbook_3/task_5_3.cpp
        Algoritm/workbook_4/task_1_4.cpp
        Algoritm/workbook_4/task_2_4.cpp
        Algoritm/workbook_4/task_4_4.cpp
        Algoritm/workbook_4/task_3_4.cpp
        Algoritm/workbook_5/task_1_5.cpp
        Algoritm/workbook_5/task_2_5.cpp
        Algoritm/workbook_5/task_3_5.cpp
        Algoritm/workbook_5/task_4_5.cpp
)
